--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a>
+        <li><a href="About.html">About Us</a>
           
         </li>
         <li><a href="portfolio.html">Portfolio</a></li>
