--- a/contact.html
+++ b/contact.html
@@ -197,21 +197,21 @@ footer{background:linear-gradient(135deg,#111,var(--red));color:#fff;text-align:
     </section>
 
     <section class="cards">
-      <a class="card facebook" href="#">
+      <a class="card facebook" href="https://web.facebook.com/#">
         Facebook
         <span>Message us directly</span>
       </a>
-      <a class="card instagram" href="#">
+      <a class="card instagram" href="https://www.instagram.com/">
         Instagram
         <span>See our work & DM us</span>
       </a>
       <a class="card whatsapp" href="#">
-        WhatsApp
+        WhatsApp 0777335868
         <span>Fast replies & quick questions</span>
       </a>
       <a class="card email" href="#">
         Email
-        <span>hello@tolem.works</span>
+        <span>tolem.works@gmail.com</span>
       </a>
     </section>
   </main>
