--- a/pricing.html
+++ b/pricing.html
@@ -154,7 +154,7 @@ body.dark footer{
         <li>Positioning line</li>
       </ul>
       <p><em>Everything you need to start looking professional online.</em></p>
-      <a class="cta" href="contact.html">Get Started</a>
+      <a class="cta" href="basic.html">Get Started</a>
     </div>
 
     <!-- PLUS -->
@@ -173,7 +173,7 @@ body.dark footer{
         <li>3 revision rounds</li>
       </ul>
       <p><em>Designed to improve visibility, clarity, and customer trust.</em></p>
-      <a class="cta" href="contact.html">Choose Plus</a>
+      <a class="cta" href="plus.html">Choose Plus</a>
     </div>
 
     <!-- PRO -->
@@ -193,7 +193,7 @@ body.dark footer{
         <li>3–5 strategic logo directions</li>
       </ul>
       <p><em>Built to launch strong and grow with confidence.</em></p>
-      <a class="cta" href="contact.html">Go Pro</a>
+      <a class="cta" href="pro.html">Go Pro</a>
     </div>
       <ul>
         <li>Complete brand & website system</li>
