--- a/index.html
+++ b/index.html
@@ -245,9 +245,10 @@
 <section class="hero" id="home">
 
   <div class="reveal">
-    <h1>Branding & websites for small businesses that want to look <span>established</span>  without paying big‑agency prices.</h1>
-    <p>Founder‑led work. Direct communication. Fast turnaround. Strategic thinking — not templates.</p>
-    <a class="btn" href="#contact">Work With Us</a>
+    <h1>We help small businesses look <span>established</span> trusted, and ready to grow.</h1>
+    <p>Logos, brand identity & visuals designed to help small businesses stand out and convert.
+</p>
+    <a class="btn" href="#contact">Get Brand Ideas</a>
   </div>
 
   <div class="reveal">
